added select control

--- a/src/styles/styles.less
+++ b/src/styles/styles.less
@@ -3,3 +3,5 @@
 @import 'global';
 
 @import '../components/application-shell/App';
+@import '../components/common/icon/Icon';
+@import '../components/common/select-input/SelectInput';
