--- a/src/styles/variables.less
+++ b/src/styles/variables.less
@@ -91,9 +91,76 @@
 @light-shadow-color: rgba(120, 120, 120, 1);
 @dark_shadow_color: rgba(55, 55, 55, 1);
 @black_shadow: rgba(0, 0, 0, 0.25);
+@transparent-lighter: rgba(0, 0, 0, 0.4);
 
 @default-font-family: 'Open Sans', sans-serif;
 
 @application-background-color: @gray_ultra_light;
 @application-font-color: @gray_dark;
 @default-background-color: @white;
+
+/*--------*/
+@llamasoft-selectinput-component-margin-top: 20px;
+@llamasoft-selectinput-component-margin-right: 15px;
+@llamasoft-selectinput-component-max-width: 240px;
+
+@select-background-color: @transparent;
+
+@select-control-background-color: @white;
+@select-control-border-color: @gray_light;
+
+@select-input-font-size: @mid-font-size;
+
+@select-border-radius: 10px;
+@select-font-size: @large-font-size;
+@select-margin-top: 3px;
+
+@select-mark-hover-color: @guru_blue;
+@select-arrow-transform:  rotate(-45deg);
+@select-arrow-border-size: 2px;
+@select-arrow-color: @gray_dark;
+@select-arrow-size: 7px;
+@select-arrow-right: 10px;
+
+@select-placeholder-color: @gray_original;
+@select-value-color: @gray_darkest;
+
+@select-height: 30px;
+@select-padding: 10px;
+
+@select-input-background-color: @transparent;
+@select-input-color: @guru_blue;
+@select-input-padding-top: 8px;
+@select-input-padding-bottom: 10px;
+
+@select-option-background-color: @white;
+@select-option-color: @gray_dark;
+
+@select-menu-max-height: 140px;
+@select-menu-outer-background-color: @white;
+@select-menu-outer-border-size: 1px;
+@select-menu-outer-border-color: @gray_mid;
+@select-menu-outer-border-color-top:@gray_light;
+
+@select-menu-outer-box-shadow-left: 2px;
+@select-menu-outer-box-shadow-bottom: 4px;
+@select-menu-outer-box-shadow-color: @transparent-lighter;
+
+@select-noresults-color: @gray_mid_dark;
+
+@text-input-background-color: @transparent;
+@text-input-border-color: @gray_light;
+@text-input-label-color: @gray_dark;
+@text-input-font-weight: @thin;
+@text-input-font-size: @large-font-size;
+
+@text-input-color: @gray_darker;
+
+@text-input-unfilled-text-color: @gray_mid_light;
+
+@text-input-disabled-text-color: @gray_light;
+@text-input-disabled-label-color: @gray_mid_light;
+
+@text-input-label-font-weight: @regular;
+@text-input-label-font-size: @regular-font-size;
+@text-input-label-letter-spacing: @small-letter-spacing;
